--- a/vc2022/InACTually.vcxproj.filters
+++ b/vc2022/InACTually.vcxproj.filters
@@ -894,6 +894,9 @@
     <ClInclude Include="..\include\utils\Logger.hpp">
       <Filter>Source Files\utils</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\main\WindowData.hpp">
+      <Filter>Source Files\main</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resources.rc">
