--- a/vc2022/IA_Processing.vcxproj.filters
+++ b/vc2022/IA_Processing.vcxproj.filters
@@ -207,6 +207,9 @@
     <ClCompile Include="..\src\processing\AFSynthProcNode.cpp">
       <Filter>Source Files\audio</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\processing\ClockProcNode.cpp">
+      <Filter>Source Files\timeline</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\processing\AudioPlayerProcNode.hpp">
@@ -385,6 +388,9 @@
     </ClInclude>
     <ClInclude Include="..\include\processing\AFSynthProcNode.hpp">
       <Filter>Source Files\audio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\processing\ClockProcNode.hpp">
+      <Filter>Source Files\timeline</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
